# FanFicFare

./: .gitignore  .travis.yml  BeautifulSoup.py  DESCRIPTION.rst  LICENSE  MANIFEST.in  README.md  adapter.py  app.yaml  cmds  constants.py  cron.yaml  defaults.ini  delete_fic.py  downaloder.py  downloader.py  editconfig.html  epubmerge.py  example.ini  ffa.py  ffnet.py  ffstorage.py  fictionalley.py  ficwad.py  fpcom.py  hpfiction.py  html2text.py  html_constants.py  index-ajax.html  index.html  index.yaml  ini-order.py  login.html  main.py  makeplugin.py  makezip.py  mediaminer.py  newdownload.py  output.py  plugin-defaults.ini  (+14 more)
calibre-plugin/: __init__.py  about.html  about.txt  action_chains.py  basicinihighlighter.py  common_utils.py  config.py  dcsource.py  dialogs.py  ffdl_plugin.py  ffdl_util.py  fff_plugin.py  fff_util.py  inihighlighter.py  jobs.py  plugin-defaults.ini  plugin-example.ini  plugin.py  prefs.py  ui.py  wordcount.py
calibre-plugin/.tx/: config
calibre-plugin/images/: icon.xcf  icon2.xcf
calibre-plugin/translations/: README.md  ar.po  ca.po  cs.po  de.po  default.po  es.po  et.po  fr.po  ja.po  ko.po  messages.pot  mr.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  uk.po  zz.po
cli/: downloader.py
css/: index.css
fanficdownloader/: BeautifulSoup.py  __init__.py  adapter.py  adastrafanfic.py  configurable.py  constants.py  defaults.ini  downloader.py  epubmerge.py  epubutils.py  exceptions.py  ffnet.py  fictionalley.py  ficwad.py  fpcom.py  geturls.py  hpfiction.py  html.py  html2text.py  html_constants.py  htmlcleanup.py  htmlheuristics.py  mediaminer.py  mobi.py  newdownload.py  output.py  potionsNsnitches.py  readme.txt  story.py  translit.py  twilighted.py  twipassword.py  twiwrite.py  whofic.py
fanficdownloader/adapters/: __init__.py  adapter_adastrafanficcom.py  adapter_archiveofourownorg.py  adapter_archiveskyehawkecom.py  adapter_ashwindersycophanthexcom.py  adapter_asr3slashzoneorg.py  adapter_bdsmgeschichten.py  adapter_bloodshedversecom.py  adapter_bloodtiesfancom.py  adapter_buffynfaithnet.py  adapter_castlefansorg.py  adapter_chaossycophanthexcom.py  adapter_checkmatedcom.py  adapter_csiforensicscom.py  adapter_darksolaceorg.py  adapter_destinysgatewaycom.py  adapter_devianthearts.py  adapter_dokugacom.py  adapter_dotmoonnet.py  adapter_dracoandginnycom.py  adapter_dramioneorg.py  adapter_dwiggiecom.py  adapter_efictionestelielde.py  adapter_efpfanficnet.py  adapter_erosnsapphosycophanthexcom.py  adapter_fanficcastletvnet.py  adapter_fanfichu.py  adapter_fanfictioncsodaidokhu.py  adapter_fanfictionjunkiesde.py  adapter_fanfictionnet.py  adapter_fanfiktionde.py  adapter_fannation.py  adapter_ficbooknet.py  adapter_fictionalleyorg.py  adapter_fictionmaniatv.py  adapter_fictionpadcom.py  adapter_fictionpresscom.py  adapter_ficwadcom.py  adapter_fimfictionnet.py  adapter_finestoriescom.py  (+84 more)
fanficdownloader/bbcodeutils/: bbcode2html.py  bbcodebuilder.py  bbcodeparser.py  readme.txt  test.py
fanficdownloader/writers/: __init__.py  base_writer.py  writer_epub.py  writer_html.py  writer_mobi.py  writer_txt.py
fanficfare/: HtmlTagStack.py  __init__.py  cli.py  cli3.py  configurable.py  configurable.py-filelist1  dateutils.py  defaults.ini  epubutils.py  example.ini  exceptions.py  fetcher.py  flaresolverr_proxy.py  geturls.py  gziphttp.py  html.py  html2text.py  htmlcleanup.py  htmlheuristics.py  mobi.py  mobihtml.py  nsapa_proxy.py  requestable.py  six.py  story.py  translit.py
fanficfare/adapters/: __init__.py  adapter_adastrafanficcom.py  adapter_adultfanfictionorg.py  adapter_alternatehistorycom.py  adapter_althistorycom.py  adapter_andromedawebcom.py  adapter_archivehpfanfictalkcom.py  adapter_archiveofourownorg.py  adapter_archiveskyehawkecom.py  adapter_artemisfowlcom.py  adapter_asexstoriescom.py  adapter_ashwindersycophanthexcom.py  adapter_asianfanficscom.py  adapter_asr3slashzoneorg.py  adapter_bdsmgeschichten.py  adapter_bdsmlibrarycom.py  adapter_bloodshedversecom.py  adapter_bloodtiesfancom.py  adapter_boxnovelcom.py  adapter_buffygilescom.py  adapter_buffynfaithnet.py  adapter_cfaa.py  adapter_chaossycophanthexcom.py  adapter_checkmatedcom.py  adapter_chireadscom.py  adapter_chosentwofanficcom.py  adapter_csiforensicscom.py  adapter_darksolaceorg.py  adapter_deandamagecom.py  adapter_deepinmysoulnet.py  adapter_destinysgatewaycom.py  adapter_deviantartcom.py  adapter_devianthearts.py  adapter_dokugacom.py  adapter_dotmoonnet.py  adapter_dracoandginnycom.py  adapter_dramioneorg.py  adapter_efictionestelielde.py  adapter_efpfanficnet.py  adapter_erosnsapphosycophanthexcom.py  (+214 more)
fanficfare/browsercache/: __init__.py  base_browsercache.py  base_chromium.py  basebrowsercache.py  blockfilecache.py  browsercache_blockfile.py  browsercache_firefox2.py  browsercache_simple.py  browsercache_sqldb.py  chromediskcache.py  firefoxcache2.py  share_open.py  simplecache.py
fanficfare/chromagnon/: LICENSE  SuperFastHash.py  cacheAddress.py  cacheBlock.py  cacheData.py  cacheEntry.py  cacheParse.py  classicalOutput.py  columnOutput.py  csvOutput.py  downloadParse.py  historyParse.py  jsonOutput.py  visitedLinks.py
fanficfare/fetchers/: __init__.py  base_fetcher.py  cache_basic.py  cache_browser.py  decorators.py  fetcher_cloudscraper.py  fetcher_flaresolverr_proxy.py  fetcher_nsapa_proxy.py  fetcher_requests.py  log.py
fanficfare/writers/: __init__.py  base_writer.py  writer_epub.py  writer_html.py  writer_mobi.py  writer_txt.py
fff_internals/: HtmlTagStack.py  cli.py  configurable.py  defaults.ini  geturls.py  gziphttp.py  story.py
included_dependencies/: brotlidecpy.py  brotlipython.py  cloudscraperuser_agent__init__.py  gif.py  six.py
js/: fdownloader.js
tests/: conftest.py  fixtures_chireads.py  fixtures_fanfictionsfr.py  fixtures_inkittcom.py  fixtures_wattpadcom.py  fixtures_wuxiaworldsite.py
utils/: remover.py  tally.py
webservice/: Readme.txt  allrecent.html  app.yaml  editconfig.html  ffstorage.py  index.html  index.yaml  login.html  main.py  recent.html  settings.py  status.html
(+110 files in other folders)
